--- a/Mock-Portfolio-in-Bootstrap/mock-portfolio-bootstrap.html
+++ b/Mock-Portfolio-in-Bootstrap/mock-portfolio-bootstrap.html
@@ -7,17 +7,117 @@
     .greeting{
       background-color: #18bc9c;
     }
+    .footer{
+      background-color: purple;
+      color: lavender;
+    }
   </style>
 </head>
 <body>
-<div class="container-fluid greeting">
-  <div class="row">
-    <div class="col-sm-12 text-center">
-      <img src="./portfolio-images/profile.png">
-      <h1>I'm a rockstar developer</h1>
-      <h2>Web Developer - Game Designer - Bootstrap Ninja</h2>
+  <div class="container-fluid greeting">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <img src="./portfolio-images/profile.png">
+        <h1>I'm a rockstar developer</h1>
+        <h2>Web Developer - Game Designer - Bootstrap Ninja</h2>
+      </div>
     </div>
   </div>
-</div>
+  <div class="container">
+    <div class="row">
+      <h2>Portfolio</h2>
+      <hr/>
+      <div class="col-sm-4 col-md-3 thumbnail">
+        <img src="./portfolio-images/cabin.png">
+      </div>
+      <div class="col-sm-4 col-md-3 thumbnail">
+        <img src="./portfolio-images/cake.png">
+      </div>
+      <div class="col-sm-4 col-md-3 thumbnail">
+        <img src="./portfolio-images/circus.png">
+      </div>
+      <div class="col-sm-4 col-md-3 thumbnail">
+        <img src="./portfolio-images/game.png">
+      </div>
+      <div class="col-sm-4 col-md-3 col-md-offset-3 thumbnail">
+        <img src="./portfolio-images/safe.png">
+      </div>
+      <div class="col-sm-4 col-md-3 thumbnail">
+        <img src="./portfolio-images/submarine.png">
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <h2>About</h2>
+          <hr/>
+        </div>
+        <div class="col-md-4 col-md-offset-2">
+          Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
+        </div>
+        <div class="col-md-4">
+          Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <h2>Contact Me</h2>
+      <hr/>
+      <div class="col-md-8 col-md-offset-2">
+        <form>
+          <div class="row control-group">
+            <div class="form-group col-sm-12">
+              <label>Name</label>
+              <input type="text" class="form-control" placeholder="Please enter your name"/>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-sm-12">
+              <label>Email</label>
+              <input type="email" class="form-control" placeholder="Please enter your Email"/>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-sm-12">
+              <label>Phone</label>
+              <input type="tel" class="form-control" placeholder="Please enter your phone number"/>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-sm-12">
+              <label>Message</label>
+              <textarea rows="5" class="form-control"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-sm-12">
+              <button class="btn btn-success btn-lg">Send Message</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid footer">
+    <div class="row">
+      <div class="col-sm-4 text-center">
+        <h3>Location</h3>
+        <p>23 Cherry Tree Lane, London, England</p>
+      </div>
+      <div class="col-sm-4 text-center">
+        <h3>Around the web</h3>
+        <ul class="list-inline">
+          <li>A cool link</li>
+          <li>A cool link</li>
+          <li>A cool link</li>
+          <li>A cool link</li>
+          <li>A cool link</li>
+        </ul>
+      </div>
+      <div class="col-sm-4 text-center">
+        <h3>About Bootstrap</h3>
+        <p>Bootstrap is a grid system CSS with 12 columns!</p>
+      </div>
+    </div>
+    
+  </div>
 </body>
 </html>
