Some small aesthetic changes and an attempt at removing the border

--- a/bs-layout-practice.html
+++ b/bs-layout-practice.html
@@ -8,18 +8,19 @@
       border: 2px solid white;
     }
     .content{
-      background-color: rosybrown;
+      background-color: lavender;
       height: 50px;
       margin-bottom: 10px;
       /* width: 100%; */
     }
     .content-row{
-      background-color: gold;
+      background-color: plum;
       /* margin-bottom: 10px; */
     }
     .ad{
-      background-color: plum;
+      background-color: purple;
       height: 50px;
+      color: white;
    /*    margin-bottom: 10px; */
     }
   </style>
